finish repairs API (#49)
